# xllm

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  README_zh.md  RELEASE.md  mkdocs_en.yml  mkdocs_zh.yml  setup.py
xllm/core/kernels/ascend/a3/atb_layers/: CMakeLists.txt
xllm/core/kernels/ascend/a3/atb_layers/core/: CMakeLists.txt
xllm/core/kernels/ascend/a3/atb_layers/core/base/: context_factory.cpp  event_manager.cpp  model.cpp
xllm/core/kernels/ascend/a3/atb_layers/core/include/atb_speed/: log.h
xllm/core/kernels/ascend/a3/atb_layers/core/log/: log.cpp  log_config.cpp  log_utils.cpp
xllm/core/kernels/ascend/a3/atb_layers/core/utils/: ModelTaskExecutor.cpp  check_util.cpp  config.cpp  file_system.cpp  share_memory.cpp  speed_probe.cpp  statistic.cpp  tensor_util.cpp
xllm/core/kernels/ascend/a3/atb_layers/models/base/layer/: decoder_layer.cpp  decoder_layer.h
xllm/core/kernels/ascend/a3/atb_layers/models/base/model/: decoder_model.cpp  decoder_model.h
xllm/core/kernels/ascend/a3/atb_layers/models/base/param/: mapping.cpp  mapping.h  model_param.cpp  model_param.h  param.h
xllm/core/kernels/ascend/a3/atb_layers/models/chatglm2/layer/: decoder_layer.cpp  decoder_layer.h
xllm/core/kernels/ascend/a3/atb_layers/models/deepseekv2/layer/: decoder_layer.cpp  decoder_layer.h
xllm/core/kernels/ascend/a3/atb_layers/models/deepseekv2/operation/: latent_attention.cpp  latent_attention.h  sp_decode.cpp
xllm/core/kernels/ascend/a3/atb_layers/models/llama/layer/: decoder_layer.cpp
xllm/core/kernels/ascend/a3/atb_layers/models/moe/layer/: decoder_layer.h
xllm/core/kernels/ascend/a3/atb_layers/models/moe/model/: decoder_model.cpp  decoder_model.h
xllm/core/kernels/ascend/a3/atb_layers/operations/: CMakeLists.txt
xllm/core/kernels/ascend/a3/atb_layers/operations/aclnn/core/: acl_nn_operation.cpp  acl_nn_operation.h  acl_nn_operation_cache.h  acl_nn_tensor.h
xllm/core/kernels/ascend/a3/atb_layers/operations/aclnn/ops/: add_rms_norm_quant_operation.h  argsort_operation.cpp  cast_operation.cpp  dequant_rope_quant_kvcache_operation.cpp  dequant_rope_quant_kvcache_operation.h  dynamic_quant_operation.cpp  finalize_routing_operation.cpp  finalize_routing_operation.h  gelu_operation.cpp  grouped_matmul_operation.h  grouped_matmul_swiglu_operation.cpp  grouped_matmul_swiglu_operation.h  index_select_operation.cpp  inplacemasked_filltensor_operation.cpp  inplacemasked_filltensor_operation.h  layer_norm_operation.h  matmul_allreduce_operation.cpp  matmul_operation.cpp  max_v2_operation.h  moe_compute_expert_tokens_operation.cpp  moe_compute_expert_tokens_operation.h  moe_distribute_combine_operation.cpp  moe_distribute_combine_operation.h  moe_init_routing_operation.cpp  moe_init_routing_operation.h  moe_init_routing_quant_operation.cpp  moe_init_routing_quant_operation.h  prompt_flash_attention_operation.cpp  prompt_flash_attention_operation.h  (+15 more)
xllm/core/kernels/ascend/a3/atb_layers/operations/fusion/: common_op_base.h  infer_shape_functions.cpp  infer_shape_functions.h  mlp_gate_v2.cpp  parallel_info.cpp  parallel_layer.cpp  parallel_layer.h  parallel_layer_v2.cpp  parallel_layer_v2.h  parallel_lmhead.cpp  parallel_lmhead_v2.cpp  parallel_lmhead_v2.h  utils.cpp  utils.h
xllm/core/kernels/ascend/a3/atb_layers/pytorch/: CMakeLists.txt
xllm/core/kernels/npu/: CMakeLists.txt
xllm/core/layers/common/: CMakeLists.txt  deepseek_v2_attention.h  fuse_norm.h  indexer.h  multi_head_attention.h  qwen3_attention.h  qwen3_decoder_layer.h  qwen3_moe_decoder_layer.h  word_embedding_impl.h
xllm/core/layers/common/gpu/: flashinfer_workspace.cpp
xllm/core/layers/common/tests/: CMakeLists.txt  indexer_tests.cpp
(+476 files in other folders)
