include(cc_library)

cc_library(
  NAME
    common_layers
  HDRS
    flashinfer_workspace.h
    deepseek_v2_attention.h
    qwen3_attention.h
    $<$<BOOL:${USE_MLU}>mlu/attention.h>
    $<$<BOOL:${USE_CUDA}>gpu/attention.h>
    fuse_norm.h
    rotary_embedding.h
    fused_moe.h
    dense_mlp.h
    qwen3_decoder_layer.h
    qwen3_moe_decoder_layer.h
    linear_impl.h
    linear.h
    word_embedding_impl.h
    layer_utils.h
    indexer.h
  SRCS
    flashinfer_workspace.cpp
    deepseek_v2_attention.cpp
    qwen3_attention.cpp
    $<$<BOOL:${USE_MLU}>mlu/attention.cpp>
    $<$<BOOL:${USE_CUDA}>gpu/attention.cpp>
    fuse_norm.cpp
    rotary_embedding.cpp
    fused_moe.cpp
    dense_mlp.cpp
    qwen3_decoder_layer.cpp
    qwen3_moe_decoder_layer.cpp
    linear_impl.cpp
    layer_utils.cpp
    indexer.cpp
  DEPS
    "-Wl,--whole-archive"
    "-Wl,--no-whole-archive"
    :kv_cache
    :prefix_cache
    :block
    :parallel_state
    :state_dict
    :model
    :kernels
    glog::glog
    gflags::gflags
    torch
    :platform
)

add_subdirectory(tests)
